--- a/indext.html
+++ b/indext.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My final project</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel = "stylesheet" href = "src/style.css"/>
 </head>
 <body>
+  <div class="container">
   <h1>
     Hello
   </h1>
+</div>
+  <script src="src/app.js"></script>
 </body>
 </html>
