--- a/indext.html
+++ b/indext.html
@@ -12,6 +12,7 @@
   <h1>
     Hello
   </h1>
+  <a href = "" class = "btn btn-primary"> click me </a>
 </div>
   <script src="src/app.js"></script>
 </body>
