--- a/index.html
+++ b/index.html
@@ -9,10 +9,75 @@
 </head>
 <body>
   <div class="container">
-  <h1>
-    Hello
-  </h1>
-  <a href = "" class = "btn btn-primary"> click me </a>
+    <div class="card mb-3" style="max-width: 540px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              This is some text within a card body.
+            </div>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+        <div class="row">
+          <ul class="first">
+            <li>
+          <div class="card">
+             <div class="card-body">
+              This is some text within a card body.
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              This is some text within a card body.
+            </div>
+          </div>
+        </li>
+        </ul>
+        <ul class="second">
+          <li>
+          <div class="card">
+            <div class="card-body">
+              This is some text within a card body.
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              This is some text within a card body.
+            </div>
+          </div>
+        </li>
+      </ul>
+      <ul class="third">
+        <li>
+          <div class="card">
+            <div class="card-body">
+              This is some text within a card body.
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              This is some text within a card body.
+            </div>
+          </div>
+        </li>
+      </ul>
+          <div class="card">
+            <div class="card-body">
+              This is some text within a card body.
+            </div>
+          </div>
+        </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+ 
 </div>
   <script src="src/app.js"></script>
 </body>
