Figuring out tight side padding

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="col-md-4">
           <div class="card"id="main-one">
             <div class="card-body">
-              This is some text within a card body.
+              This is some text 
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
         </div>
           </div>
         
-        <div class="card col-md-10"id="icon-card">
+        <div class="card col-md-9"id="icon-card">
           <div class="card-body">
 🥰🤩
           </div>
