Added the background color

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
         </div>
         
-          <div class="card"id="last-one">
+          <div class="card col-md-8"id="last-one">
             <div class="card-body">
               This is some
             </div>
