--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel = "stylesheet" href = "src/style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/44996aa8b5.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
@@ -82,7 +83,14 @@
         
         <div class="card col-md-9"id="icon-card">
           <div class="card-body">
-🥰🤩
+            <i class="fas fa-sun"></i>
+            <i class="fas fa-cloud-sun"></i>
+            <i class="fas fa-cloud"></i>
+            <i class="fas fa-cloud-rain"></i>
+            <i class="fas fa-cloud-showers-heavy"></i>
+            <i class="fas fa-poo-storm"></i>
+            <i class="fas fa-snowflake"></i>
+            <i class="far fa-snowflake"id="flake"></i>
           </div>
         </div>
       </div>
