Working on HTML text on first card

--- a/index.html
+++ b/index.html
@@ -16,7 +16,30 @@
         <div class="col-md-4">
           <div class="card"id="main-one">
             <div class="card-body">
-              This is some text 
+              <h3>
+                Monday
+              </h3>
+              <hr/>
+              <h5>
+                NOVEMBER 5         <span>   11:00 pm </span> 
+              </h5>
+              <hr/>
+              <h1>
+                <i class="fas fa-sun"></i>
+                25 °C | F 
+              </h1>
+              <h2>
+                LONDON
+              </h2>
+              <hr/>
+              <ul>
+                <li>
+                  wind : 14 KM/H 
+                </li>
+                <li>
+                  HUMIDITY: 70%
+                </li>
+              </ul>
             </div>
           </div>
         </div>
