Added my name on the open source

--- a/index.html
+++ b/index.html
@@ -169,6 +169,17 @@
             </div>
           </div>
         </div>
+
+        
+      
+      </div>
+      <div class = "git-link">
+
+        <small class = "git-link">
+        <a href="https://github.com/Sberry2020/Sun-Girl/blob/main/index.html"> Open-sourse code </a><h5>
+          by Aksana Kurbanova
+        </h5>
+      </small>
       </div>
     </div>
     <script src="src/app.js"></script>
