Making one of the temperature number bolder

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="card" id="top">
                       <div class="card-body">
                         <div class="col">
-                          Tuesday <i class="fas fa-cloud-sun"></i> <br />7° -1°
+                          Tuesday <i class="fas fa-cloud-sun"></i> <br /><strong class="number">7°</strong> -1°
                         </div>
                       </div>
                     </div>
@@ -76,7 +76,7 @@
                       <div class="card-body">
                         <div class="col">
                           Wednesday <i class="fas fa-cloud-rain"></i> <br />
-                          6° -3°
+                          <strong class="number">6°</strong> -3°
                         </div>
                       </div>
                     </div>
@@ -90,7 +90,7 @@
                     <div class="card" id="middle">
                       <div class="card-body">
                         <div class="col">
-                          Thursday <i class="fas fa-cloud-sun"></i> <br />4° -4°
+                          Thursday <i class="fas fa-cloud-sun"></i> <br /><strong class="number">4°</strong>-4°
                         </div>
                       </div>
                     </div>
@@ -101,7 +101,7 @@
                       <div class="card-body">
                         <div class="col">
                           Friday <i class="fas fa-cloud"></i> <br />
-                          4° -3°
+                          <strong class="number">4°</strong> -3°
                         </div>
                       </div>
                     </div>
@@ -116,7 +116,7 @@
                       <div class="card-body">
                         <div class="col">
                           Saturday <i class="fas fa-cloud-sun"></i><br />
-                          4° -4°
+                         <strong class="number">4°</strong>  -4°
                         </div>
                       </div>
                     </div>
@@ -127,7 +127,7 @@
                       <div class="card-body">
                         <div class="col">
                           Sunday <i class="fas fa-cloud-showers-heavy"></i>
-                          <br />11° -3°
+                          <br /><strong class="number">11°</strong> -3°
                         </div>
                       </div>
                     </div>
