Changed google font link to wght@400;700

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/44996aa8b5.js"
       crossorigin="anonymous"
@@ -186,7 +183,7 @@
       <div class = "git-link">
 
         <small class = "git-link">
-        <a href="https://github.com/Sberry2020/Sun-Girl/blob/main/index.html"> Open-sourse code </a><h5>
+        <a href="https://github.com/Sberry2020/My-final-project"> Open-sourse code </a><h5>
           by Aksana Kurbanova
         </h5>
       </small>
