--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h5 id="date">  </h5>
                 <hr />
                 <h1>
-                  <i class="fas fa-sun"></i>
+                  <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" id="icon"/><br/>
                   
                   <span id="temperature">25</span> <span class="units"> °C | <a href="#" id="fahrenheit-link"> °F </a></span>
                 </h1>
