--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <h5 id="date">  </h5>
                 <hr />
                 <h1>
-                  <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" id="icon"/><br/>
+                  <img src="https://cdn.onlinewebfonts.com/svg/img_526004.png "width="60" id="icon"/><br/>
                   
-                  <span id="temperature">25</span> <span class="units"> °C | <a href="#" id="fahrenheit-link"> °F </a></span>
-                </h1>
+                  <span id="temperature">25</span> <span class="units"> <a href = "#" id= "celsius-link"class="active" >°C </a> | <a href="#" id="fahrenheit-link"> °F </a></span>
+               </h1>
                 <h2 id="city">
                   LONDON
                 </h2>
