To JS added functions for date and time

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           <div class="col-md-4">
             <div class="card" id="main-one">
               <div class="card-body">
-                <h3>
+                <h3 id="day">
                   Monday
                 </h3>
                 <hr />
-                <h5 id="date">  </h5>
+                <h5 id="date"> Last updated: </h5>
                 <hr />
                 <div class="image">
-                  <img src="https://cdn.onlinewebfonts.com/svg/img_526004.png "width="60" id="icon"/>
+                  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon"/>
                
                  <div class="tempOnMain">
                 
