--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-8">
-            <div class="card-body">
+          <div class="col-md-8" id = "forecast">
+            <div class="card-body"> 
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-6">
