Putting 6 different hour forecast to JS

--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                   <div class="col-md-6">
                     <div class="card" id="top">
                       <div class="card-body">
-                        <div class="col">
-                          Tuesday <i class="fas fa-cloud-sun"></i> <br /><strong class="number">7°</strong> -1°
+                        <div id="one">
+                          12:00  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-two"/> <br />
+                          <strong class="number">6°</strong> -3°
+
                         </div>
                       </div>
                     </div>
@@ -73,8 +75,8 @@
                   <div class="col-md-6">
                     <div class="card" id="second-top">
                       <div class="card-body">
-                        <div class="col">
-                          Wednesday <i class="fas fa-cloud-rain"></i> <br />
+                        <div class="col" id="two">
+                          Wednesday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-two"/> <br />
                           <strong class="number">6°</strong> -3°
                         </div>
                       </div>
@@ -88,8 +90,8 @@
                   <div class="col-md-6">
                     <div class="card" id="middle">
                       <div class="card-body">
-                        <div class="col">
-                          Thursday <i class="fas fa-cloud-sun"></i> <br /><strong class="number">4°</strong>-4°
+                        <div class="col"id="three">
+                          Thursday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-three"/> <br /><strong class="number">4°</strong>-4°
                         </div>
                       </div>
                     </div>
@@ -98,8 +100,8 @@
                   <div class="col-md-6">
                     <div class="card" id="second-middle">
                       <div class="card-body">
-                        <div class="col">
-                          Friday <i class="fas fa-cloud"></i> <br />
+                        <div class="col"id="four">
+                          Friday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-four"/> <br />
                           <strong class="number">4°</strong> -3°
                         </div>
                       </div>
@@ -113,8 +115,8 @@
                   <div class="col-md-6">
                     <div class="card" id="bottom">
                       <div class="card-body">
-                        <div class="col">
-                          Saturday <i class="fas fa-cloud-sun"></i><br />
+                        <div class="col"id="five">
+                          Saturday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-five"/><br />
                          <strong class="number">4°</strong>  -4°
                         </div>
                       </div>
@@ -124,8 +126,8 @@
                   <div class="col-md-6">
                     <div class="card" id="second-bottom">
                       <div class="card-body">
-                        <div class="col">
-                          Sunday <i class="fas fa-cloud-showers-heavy"></i>
+                        <div class="col"id="six">
+                          Sunday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-six"/>
                           <br /><strong class="number">11°</strong> -3°
                         </div>
                       </div>
