Added to JS each 3 hour time change forecast

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="card" id="top">
                       <div class="card-body">
                         <div id="one">
-                          12:00  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-two"/> <br />
+                          24:00  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-two"/> <br />
                           <strong class="number">6°</strong> -3°
 
                         </div>
@@ -76,7 +76,7 @@
                     <div class="card" id="second-top">
                       <div class="card-body">
                         <div class="col" id="two">
-                          Wednesday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-two"/> <br />
+                          03:00  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-two"/> <br />
                           <strong class="number">6°</strong> -3°
                         </div>
                       </div>
@@ -91,7 +91,7 @@
                     <div class="card" id="middle">
                       <div class="card-body">
                         <div class="col"id="three">
-                          Thursday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-three"/> <br /><strong class="number">4°</strong>-4°
+                          06:00  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-three"/> <br /><strong class="number">4°</strong>-4°
                         </div>
                       </div>
                     </div>
@@ -101,7 +101,7 @@
                     <div class="card" id="second-middle">
                       <div class="card-body">
                         <div class="col"id="four">
-                          Friday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-four"/> <br />
+                          09:00  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-four"/> <br />
                           <strong class="number">4°</strong> -3°
                         </div>
                       </div>
@@ -116,7 +116,7 @@
                     <div class="card" id="bottom">
                       <div class="card-body">
                         <div class="col"id="five">
-                          Saturday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-five"/><br />
+                          24:00  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-five"/><br />
                          <strong class="number">4°</strong>  -4°
                         </div>
                       </div>
@@ -127,7 +127,7 @@
                     <div class="card" id="second-bottom">
                       <div class="card-body">
                         <div class="col"id="six">
-                          Sunday  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-six"/>
+                          03:00  <img src="https://cdn3.iconfinder.com/data/icons/70-basic-icons/48/48_px_-_Regular_-_70_Basic_Icons-12-512.png"width="60" id="icon-six"/>
                           <br /><strong class="number">11°</strong> -3°
                         </div>
                       </div>
