--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="card mb-3">
-        <div class="row no-gutters">
+ <div class="card mb-3">
+ <div class="row no-gutters">
           <div class="col-md-4">
             <div class="card" id="main-one">
               <div class="card-body">
@@ -49,9 +49,9 @@
                 <hr />
 
                 <ul>
-                  <li> WIND: <strong id="wind"></strong> Km/H
+                  <li> <img src="https://cdn0.iconfinder.com/data/icons/weather-line-19/32/Windy-128.png" class="wind"/> Wind:<strong id="wind"></strong> Km/H
              </li>
-                  <li>Humidity: <strong id="humidity"></strong>%</li>
+                  <li><img src="https://cdn3.iconfinder.com/data/icons/travelling-icon-set-ii-part/800/waves-128.png" class="hum"/> Humidity: <strong id="humidity"></strong>%</li>
                </ul>
               </div>
             </div>
@@ -163,16 +163,16 @@
           <div class="col-md-12">
             <div class="card" id="icon-card">
               <div class="card-body">
-                <i class="fas fa-sun"></i>
-                <i class="fas fa-cloud-sun"></i>
-                <i class="fas fa-cloud"></i>
-                <i class="fas fa-cloud-rain"></i>
-                <i class="fas fa-cloud-showers-heavy"></i>
-                <i class="fas fa-poo-storm"></i>
-                <i class="fas fa-snowflake"></i>
-                <i class="far fa-snowflake" id="flake"></i>
-                <i class="fas fa-sun"></i>
-                <i class="fas fa-cloud-sun"></i>
+                <img src= "https://cdn2.iconfinder.com/data/icons/weather-emoticon/64/07_sun_smile_happy_emoticon_weather_smiley-128.png" class="fas fa-sun"/>
+                <img src="https://cdn3.iconfinder.com/data/icons/tango-icon-library/48/face-glasses-128.png" class="fas fa-cloud-sun"/>
+                <img src="https://cdn4.iconfinder.com/data/icons/iconsland-weather/PNG/128x128/Snow_Occasional.png" class="fas fa-cloud"/>
+                <img src="https://cdn4.iconfinder.com/data/icons/iconsland-weather/PNG/128x128/Sunny.png" class="fas fa-cloud-rain"/>
+                <img src="https://cdn0.iconfinder.com/data/icons/weather-filled-outline-6/64/weather_cloud_sun_moon_rain-03-128.png" class="fas fa-cloud-showers-heavy"/>
+                <img src="https://cdn0.iconfinder.com/data/icons/weather-filled-outline-6/64/weather_cloud_sun_moon_rain-09-128.png" class="fas fa-poo-storm"/>
+                <img src="https://cdn0.iconfinder.com/data/icons/weather-filled-outline-6/64/weather_cloud_sun_moon_rain-14-128.png" class="fas fa-snowflake"></i>
+                <img src="https://cdn4.iconfinder.com/data/icons/iconsland-weather/PNG/128x128/Sleet.png" class="far fa-snowflake" id="flake"/>
+                <img src="https://cdn2.iconfinder.com/data/icons/stickerweather/128/45.png" class="fas fa-sun"/>
+                <img src="https://cdn2.iconfinder.com/data/icons/stickerweather/128/46.png" class="fas fa-cloud-sun"/>
                 <div class="card-body">
                   
                   
