Added to CSS bolder font

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
  <div class="card mb-3">
  <div class="row no-gutters">
-          <div class="col-md-4">
+          <div class="col-sm-4">
             <div class="card" id="main-one">
               <div class="card-body">
                 <h3 id="day">
@@ -49,18 +49,18 @@
                 <hr />
 
                 <ul>
-                  <li> <img src="https://cdn0.iconfinder.com/data/icons/weather-line-19/32/Windy-128.png" class="wind"/> Wind:<strong id="wind"></strong> Km/H
+                  <li> <img src="https://cdn0.iconfinder.com/data/icons/weather-line-19/32/Windy-128.png" class="wind"/> Wind: <strong id="wind"></strong> Km/H
              </li>
                   <li><img src="https://cdn3.iconfinder.com/data/icons/travelling-icon-set-ii-part/800/waves-128.png" class="hum"/> Humidity: <strong id="humidity"></strong>%</li>
                </ul>
               </div>
             </div>
           </div>
-          <div class="col-md-8" id = "forecast">
+          <div class="col-sm-8" id = "forecast">
             <div class="card-body"> 
               <div class="container-fluid">
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-sm-6">
                     <div class="card" id="top">
                       <div class="card-body">
                         <div id="one">
@@ -72,7 +72,7 @@
                     </div>
                   </div>
 ​
-                  <div class="col-md-6">
+                  <div class="col-sm-6">
                     <div class="card" id="second-top">
                       <div class="card-body">
                         <div class="col" id="two">
@@ -87,7 +87,7 @@
 ​
               <div class="container-fluid">
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-sm-6">
                     <div class="card" id="middle">
                       <div class="card-body">
                         <div class="col"id="three">
@@ -97,7 +97,7 @@
                     </div>
                   </div>
 ​
-                  <div class="col-md-6">
+                  <div class="col-sm-6">
                     <div class="card" id="second-middle">
                       <div class="card-body">
                         <div class="col"id="four">
@@ -112,7 +112,7 @@
 ​
               <div class="container-fluid">
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-sm-6">
                     <div class="card" id="bottom">
                       <div class="card-body">
                         <div class="col"id="five">
@@ -123,7 +123,7 @@
                     </div>
                   </div>
 ​
-                  <div class="col-md-6">
+                  <div class="col-sm-6">
                     <div class="card" id="second-bottom">
                       <div class="card-body">
                         <div class="col"id="six">
@@ -136,7 +136,7 @@
                 </div>
               </div>
 ​
-              <div class="col-md-12">
+              <div class="col-sm-12">
                 <div class="card" id="last-one">
                   <div class="card-body">
                     <form id="search-form" class="form-inline">
@@ -160,7 +160,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-sm-12">
             <div class="card" id="icon-card">
               <div class="card-body">
                 <img src= "https://cdn2.iconfinder.com/data/icons/weather-emoticon/64/07_sun_smile_happy_emoticon_weather_smiley-128.png" class="fas fa-sun"/>
