Changed the city name by Default page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </div>
             </div>
                 <h2 id="city">
-                  LONDON
+                  Miami
                 </h2>
                 <h4 id="description">
 
@@ -65,7 +65,7 @@
                       <div class="card-body">
                         <div id="one">
                           12:00  <img src="https://cdn4.iconfinder.com/data/icons/iconsland-weather/PNG/128x128/Snow_Occasional.png"width="60" id="icon-two"/> <br />
-                          <strong class="number">6°</strong> -3°
+                          <strong class="number">27°</strong> 26°
 
                         </div>
                       </div>
@@ -77,7 +77,7 @@
                       <div class="card-body">
                         <div class="col" id="two">
                           03:00  <img src="https://cdn0.iconfinder.com/data/icons/weather-filled-outline-6/64/weather_cloud_sun_moon_rain-04-128.png"width="60" id="icon-two"/> <br />
-                          <strong class="number">6°</strong> -3°
+                          <strong class="number"> 27°</strong> 25°
                         </div>
                       </div>
                     </div>
@@ -91,7 +91,7 @@
                     <div class="card" id="middle">
                       <div class="card-body">
                         <div class="col"id="three">
-                          06:00  <img src="https://cdn0.iconfinder.com/data/icons/weather-filled-outline-6/64/weather_cloud_sun_moon_rain-09-128.png"width="60" id="icon-three"/> <br /><strong class="number">4°</strong>-4°
+                          06:00  <img src="https://cdn0.iconfinder.com/data/icons/weather-filled-outline-6/64/weather_cloud_sun_moon_rain-09-128.png"width="60" id="icon-three"/> <br /><strong class="number"> 26°</strong> 23°
                         </div>
                       </div>
                     </div>
@@ -102,7 +102,7 @@
                       <div class="card-body">
                         <div class="col"id="four">
                           09:00  <img src="https://cdn0.iconfinder.com/data/icons/weather-filled-outline-6/64/weather_cloud_sun_moon_rain-41-128.png"width="60" id="icon-four"/> <br />
-                          <strong class="number">4°</strong> -3°
+                          <strong class="number"> 25°</strong> 26°
                         </div>
                       </div>
                     </div>
@@ -128,7 +128,7 @@
                       <div class="card-body">
                         <div class="col"id="six">
                           03:00  <img src="https://cdn3.iconfinder.com/data/icons/tango-icon-library/48/face-glasses-128.png"width="60" id="icon-six"/>
-                          <br /><strong class="number">11°</strong> -3°
+                          <br /><strong class="number"> 27°</strong> 28°
                         </div>
                       </div>
                     </div>
